--- a/app/src/main/res/layout/content_registrar_debito_pagamento_tipo.xml
+++ b/app/src/main/res/layout/content_registrar_debito_pagamento_tipo.xml
@@ -26,7 +26,7 @@
                 <TextView android:id="@+id/textViewClienteNome"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:textColor="@color/secondary_text"
+                          android:textColor="@color/secondaryTextColor"
                           android:textStyle="bold"
                           android:textSize="16sp"
                           android:text="Nome do Cliente"
@@ -43,7 +43,7 @@
                 <TextView android:id="@+id/textViewTotalLabel"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:textColor="@color/secondary_text"
+                          android:textColor="@color/secondaryTextColor"
                           android:textSize="16sp"
                           android:textAlignment="textEnd"
                           android:text="@string/label_total_pagar"/>
@@ -51,7 +51,7 @@
                 <TextView android:id="@+id/textViewClienteNone"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:textColor="@color/primary_light"
+                          android:textColor="@color/primaryLightColor"
                           android:textStyle="bold"
                           android:textAlignment="textEnd"
                           android:textSize="25sp"
@@ -69,7 +69,7 @@
                 <TextView android:id="@+id/textViewTipoPagamentoLabel"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:textColor="@color/secondary_text"
+                          android:textColor="@color/secondaryTextColor"
                           style="bold"
                           android:textSize="16sp"
                           android:text="@string/label_tipo_pagamento"
@@ -121,7 +121,7 @@
                     <TextView android:id="@+id/textViewDataPrevistaPagamentoLabel"
                               android:layout_width="wrap_content"
                               android:layout_height="match_parent"
-                              android:textColor="@color/secondary_text"
+                              android:textColor="@color/secondaryTextColor"
                               android:layout_marginBottom="8dp"
                               android:textSize="16sp"
                               android:text="@string/label_data_prevista_pagamento"/>
@@ -129,7 +129,7 @@
                     <TextView android:id="@+id/textViewDataPrevistaPagamento"
                               android:layout_width="match_parent"
                               android:layout_height="match_parent"
-                              android:textColor="@color/primary"
+                              android:textColor="@color/primaryColor"
                               android:textStyle="bold"
                               android:textSize="18sp"
                               android:padding="8dp"
