--- a/app/src/main/res/layout/content_registrar_debito_pagamento_wizard.xml
+++ b/app/src/main/res/layout/content_registrar_debito_pagamento_wizard.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="top"
-            android:background="@color/primary"
+            android:background="@color/primaryColor"
             android:orientation="horizontal"
             android:padding="8dp">
 
@@ -21,8 +21,8 @@
                 android:layout_weight="1"
                 android:gravity="center|start"
                 android:text="Pagando"
-                android:textColor="@color/primary_text"
-                android:textSize="25sp"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         <TextView
@@ -30,10 +30,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center|start"
+                android:gravity="center|end"
                 android:text="R$ 0,00"
-                android:textColor="@color/primary_text"
-                android:textSize="25sp"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
     </LinearLayout>
@@ -51,9 +51,11 @@
                 android:id="@+id/buttonVoltar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/primary"
-                android:textColor="@android:color/white"
+                android:background="@android:color/white"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:textColor="@color/primaryColor"
                 android:text="@string/label_voltar"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:paddingStart="26dp"
                 android:paddingEnd="26dp"
@@ -64,9 +66,11 @@
                 android:id="@+id/buttonAvancar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@color/primary"
-                android:textColor="@android:color/white"
+                android:background="@android:color/white"
+                android:textColor="@color/primaryColor"
+                android:foreground="?android:attr/selectableItemBackground"
                 android:text="@string/label_avancar"
+                android:textSize="18sp"
                 android:paddingStart="26dp"
                 android:paddingEnd="26dp"
                 android:textStyle="bold"
