--- a/app/src/main/res/layout/recycler_view_item_produto.xml
+++ b/app/src/main/res/layout/recycler_view_item_produto.xml
@@ -68,7 +68,7 @@
                         android:layout_weight="1"
                         android:gravity="start"
                         android:text="10,00"
-                        android:textColor="@color/secondary_text"
+                        android:textColor="@color/secondaryTextColor"
                         android:textSize="18sp" />
 
             </LinearLayout>
