--- a/app/src/main/res/drawable/shape_button_group_right_accent.xml
+++ b/app/src/main/res/drawable/shape_button_group_right_accent.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <stroke android:width="1dp" android:color="@color/accent_active" />
 
-    <solid android:color="@color/accent"/>
+    <solid android:color="@color/secondaryColor"/>
 
     <padding android:left="8dp"
              android:top="8dp"
