--- a/app/src/main/res/drawable/shape_button_group_right_accent_checked.xml
+++ b/app/src/main/res/drawable/shape_button_group_right_accent_checked.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <stroke android:width="1dp" android:color="@color/accent" />
+    <stroke android:width="1dp" android:color="@color/secondaryColor" />
 
     <solid android:color="@color/accent_active"/>
 
