--- a/app/src/main/res/layout/activity_lista_estoque.xml
+++ b/app/src/main/res/layout/activity_lista_estoque.xml
@@ -105,7 +105,7 @@
                             android:layout_weight="2"
                             android:background="@android:color/transparent"
                             android:text="@string/cancelar"
-                            android:textColor="@color/secondary_text" />
+                            android:textColor="@color/secondaryTextColor" />
 
                     <Button
                             android:id="@+id/buttonAdd"
@@ -115,7 +115,7 @@
                             android:layout_weight="2"
                             android:background="@android:color/transparent"
                             android:text="@string/salvar"
-                            android:textColor="@color/primary" />
+                            android:textColor="@color/primaryColor" />
 
                 </LinearLayout>
 
