--- a/app/src/main/res/layout/dialog_layout_error.xml
+++ b/app/src/main/res/layout/dialog_layout_error.xml
@@ -35,7 +35,7 @@
                   android:textStyle="bold"
                   android:textAlignment="center"
                   android:text="@string/toast_title_error"
-                  android:textColor="@color/secondary_text" />
+                  android:textColor="@color/secondaryTextColor" />
 
         <TextView android:id="@+id/text"
                   android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
                   android:textSize="16sp"
                   android:layout_marginTop="16dp"
                   android:text="@string/mensagem_erro"
-                  android:textColor="@color/secondary_text" />
+                  android:textColor="@color/secondaryTextColor" />
 
     </LinearLayout>
 
@@ -56,7 +56,7 @@
         <Button android:id="@+id/button_negative"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/primary"
+                android:textColor="@color/primaryColor"
                 android:text="@string/cancelar"
                 android:background="@android:color/transparent"
                 android:layout_weight="1"/>
