--- a/app/src/main/res/layout/list_view_header_default.xml
+++ b/app/src/main/res/layout/list_view_header_default.xml
@@ -17,7 +17,7 @@
     <TextView android:id="@+id/textView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:textColor="@color/primary_text"
+              android:textColor="@color/primaryTextColor"
               android:textStyle="bold"
               android:textAlignment="center"
               android:textSize="16sp"
