--- a/app/src/main/res/layout/toast_layout_confirm.xml
+++ b/app/src/main/res/layout/toast_layout_confirm.xml
@@ -21,7 +21,7 @@
               android:layout_gravity="center"
               android:textSize="16sp"
               android:text="@string/mensagem_sucesso"
-              android:textColor="@color/secondary_text" />
+              android:textColor="@color/secondaryTextColor" />
 
 
 
