--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,32 +8,32 @@
         <item
                 android:id="@+id/nav_main"
                 android:icon="@drawable/account_black_24dp"
-                android:title="Clientes"/>
+                android:title="@string/menu_clientes"/>
 
         <item
                 android:id="@+id/nav_fornecedores"
                 android:icon="@drawable/account_black_24dp"
-                android:title="Fornecedores"/>
+                android:title="@string/menu_fornecedores"/>
 
         <item
                 android:id="@+id/nav_balancete"
                 android:icon="@drawable/tag_plus_white_24dp"
-                android:title="Balancete"/>
+                android:title="@string/menu_balancete"/>
 
         <item
                 android:id="@+id/nav_departamento"
                 android:icon="@drawable/shape_white_24dp"
-                android:title="Departamentos"/>
+                android:title="@string/menu_categorias"/>
 
         <item
                 android:id="@+id/nav_produto"
                 android:icon="@drawable/tag_white_24dp"
-                android:title="Produtos"/>
+                android:title="@string/menu_produtos"/>
 
         <item
                 android:id="@+id/nav_estoque"
                 android:icon="@drawable/tag_plus_white_24dp"
-                android:title="Estoque"/>
+                android:title="@string/menu_estoque"/>
 
     </group>
 
