--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="bg_black_transparencia">#9AF1F1F1</color>
-    <color name="color_success">#16FF2D</color>
+    <color name="color_success">#01BD13</color>
     <color name="color_error">#FF1616</color>
     <color name="color_alert">#FFBD16</color>
 
