--- a/app/src/main/res/layout/dialog_layout_error.xml
+++ b/app/src/main/res/layout/dialog_layout_error.xml
@@ -11,8 +11,7 @@
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:background="@color/color_error"
-                  android:padding="4dp"
-                  android:layout_margin="5dp">
+                  android:padding="4dp">
 
         <ImageView android:id="@+id/image"
                    app:srcCompat="@drawable/close_circle_outline_white"
@@ -32,7 +31,6 @@
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:textSize="25sp"
-                  android:textStyle="bold"
                   android:textAlignment="center"
                   android:text="@string/toast_title_error"
                   android:textColor="@color/secondaryTextColor" />
@@ -56,7 +54,6 @@
         <Button android:id="@+id/button_negative"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/primaryColor"
                 android:text="@string/cancelar"
                 android:background="@android:color/transparent"
                 android:layout_weight="1"/>
