--- a/app/src/main/res/layout/recycler_view_item_cesta.xml
+++ b/app/src/main/res/layout/recycler_view_item_cesta.xml
@@ -23,7 +23,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                    android:id="@+id/textViewItemCodigo"
+                    android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -31,10 +31,10 @@
                     android:text="@string/label_codigo"
                     android:textSize="18sp"
                     app:layout_constraintStart_toEndOf="@+id/imageViewProduto"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewNome" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
             <TextView
-                    android:id="@+id/textViewNome"
+                    android:id="@+id/textView1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
