--- a/app/src/main/res/layout/recycler_view_item_default_2.xml
+++ b/app/src/main/res/layout/recycler_view_item_default_2.xml
@@ -15,7 +15,7 @@
             android:paddingTop="8dip"
             android:paddingBottom="8dip">
 
-        <TextView android:id="@+id/textViewNome"
+        <TextView android:id="@+id/textView1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Nome"
@@ -26,12 +26,12 @@
                   android:textAllCaps="true"
                   android:textColor="@android:color/black"/>
 
-        <TextView android:id="@+id/textViewItemCodigo"
+        <TextView android:id="@+id/textView2"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Nome"
                   android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toBottomOf="@+id/textViewNome"
+                  app:layout_constraintTop_toBottomOf="@+id/textView1"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"/>
 
