--- a/app/src/main/res/layout/recycler_view_item_produto.xml
+++ b/app/src/main/res/layout/recycler_view_item_produto.xml
@@ -41,7 +41,7 @@
                     android:padding="4dp">
 
                 <TextView
-                        android:id="@+id/textViewNome"
+                        android:id="@+id/textView1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="2"
@@ -58,7 +58,7 @@
                         android:text="@string/label_codigo"
                         android:textSize="12sp"
                         app:layout_constraintStart_toEndOf="@+id/imageViewProduto"
-                        app:layout_constraintTop_toBottomOf="@+id/textViewNome" />
+                        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
                 <TextView
                         android:id="@+id/textViewSubtotal"
