--- a/app/src/main/res/layout/departamento_bottom_seet.xml
+++ b/app/src/main/res/layout/departamento_bottom_seet.xml
@@ -45,6 +45,9 @@
             <com.google.android.material.textfield.TextInputEditText android:id="@+id/textViewDepartamento"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:inputType="text"
+                    android:imeOptions="actionDone"
                     android:hint="@string/nome_do_departamento"/>
 
         </com.google.android.material.textfield.TextInputLayout>
