--- a/app/src/main/res/layout/activity_cadastrar_fornecedor.xml
+++ b/app/src/main/res/layout/activity_cadastrar_fornecedor.xml
@@ -52,7 +52,7 @@
                 android:layout_marginTop="16dp"
                 android:hint="@string/cliente_telefone"
                 android:padding="8dp"
-                android:inputType="text" />
+                android:inputType="phone" />
 
         <EditText
                 android:id="@+id/editTextEmail"
