--- a/app/src/main/res/layout/activity_departamento.xml
+++ b/app/src/main/res/layout/activity_departamento.xml
@@ -7,6 +7,15 @@
         android:layout_height="match_parent"
         tools:context="br.com.rm.cfv.activities.departamento.DepartamentoActivity">
 
+        <ViewStub
+                android:id="@+id/viewStub"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout="@layout/lista_vazia_view"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <ListView
                 android:id="@+id/listViewDepartamentos"
@@ -14,7 +23,7 @@
                 android:layout_height="match_parent"
                 tools:listitem="@layout/recycler_view_item_default_1"
                 android:divider="@android:color/transparent"
-                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
