--- a/app/src/main/res/layout/activity_detalhe_parcela_debito.xml
+++ b/app/src/main/res/layout/activity_detalhe_parcela_debito.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        tools:context=".activities.contaPagarReceber.DetalheParcelaDebitoActivity">
+        tools:context=".activities.contaPagarReceber.contaPagarReceberViewer.detalhe.DetalheParcelaActivity">
 
     <LinearLayout
             android:layout_width="match_parent"
