--- a/app/src/main/res/layout/content_registrar_debito_pagamento.xml
+++ b/app/src/main/res/layout/content_registrar_debito_pagamento.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".activities.contaPagarReceber.RegistrarContaPagarReceberActivity">
+        tools:context=".activities.contaPagarReceber.compra_venda_produtos.RegistrarCompraVendaActivity">
 
     <include android:id="@+id/registrarDebitoPagamentoTipo"
             android:visibility="visible"
