--- a/app/src/main/res/layout/fragment_balancete.xml
+++ b/app/src/main/res/layout/fragment_balancete.xml
@@ -4,14 +4,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             app:cardElevation="2dp"
-            app:cardUseCompatPadding="true"
-            tools:context=".activities.balancete.BalanceteActivity">
+            app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
@@ -111,6 +111,20 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            app:cardElevation="2dp"
+            app:cardUseCompatPadding="true">
+
+        <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/chart1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
     </androidx.cardview.widget.CardView>
 
