--- a/app/src/main/res/layout/content_registrar_debito_tipo_pagamento.xml
+++ b/app/src/main/res/layout/content_registrar_debito_tipo_pagamento.xml
@@ -18,35 +18,38 @@
             android:text="@string/label_tipo_pagamento"
             android:textColor="@color/secondaryTextColor"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonPagAvista"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayoutOpcoes"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="16dp" />
 
-    <Button
-            android:id="@+id/buttonPagAvista"
+    <LinearLayout android:id="@+id/linearLayoutOpcoes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/secondaryColor"
-            android:tag="selecionado"
-            android:text="@string/label_tipo_pag_a_vista"
-            android:textStyle="bold"
-            android:layout_marginEnd="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" >
 
-    <Button
-            android:id="@+id/buttonPagPrazo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/secondaryColor"
-            android:text="@string/label_tipo_pag_prazo"
-            android:textStyle="bold"
-            android:layout_marginStart="100dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <Button
+                android:id="@+id/buttonPagAvista"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/secondaryColor"
+                android:tag="selecionado"
+                android:layout_margin="4dp"
+                android:text="@string/label_tipo_pag_a_vista"
+                android:textStyle="bold" />
+
+        <Button
+                android:id="@+id/buttonPagPrazo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:background="@color/secondaryColor"
+                android:text="@string/label_tipo_pag_prazo"
+                android:textStyle="bold" />
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
