--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -35,6 +35,11 @@
                 android:icon="@drawable/tag_plus_white_24dp"
                 android:title="@string/menu_estoque"/>
 
+        <item
+                android:id="@+id/nav_config"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="@string/menu_configuracoes"/>
+
     </group>
 
 
