Tela de Dashboard

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,9 @@
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
 
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">@color/secondaryColor</item>  // you can change the color of the yearPiker dialog
+        <item name="android:textColorPrimary">@color/secondaryTextColor</item> // you can change the color of the yearPiker dialog
+    </style>
+
 </resources>
