--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,6 +21,11 @@
                 android:title="@string/menu_balancete"/>
 
         <item
+                android:id="@+id/nav_charts"
+                android:icon="@drawable/chart_pie"
+                android:title="Graficos"/>
+
+        <item
                 android:id="@+id/nav_departamento"
                 android:icon="@drawable/shape_white_24dp"
                 android:title="@string/menu_categorias"/>
